# webrtcsink

./: README.md  gcc.md
plugins/: Cargo.toml
plugins/examples/: webrtcsink-stats-server.rs
plugins/examples/webrtcsink-stats/src/: App.svelte
plugins/src/: lib.rs  utils.rs
plugins/src/gcc/: imp.rs  mod.rs
plugins/src/signaller/: imp.rs  mod.rs
plugins/src/webrtcsink/: gcc.rs  imp.rs  mod.rs  utils.rs
plugins/src/webrtcsrc/: imp.rs  mod.rs
plugins/src/webrtcsrc/signaller/: imp.rs  mod.rs
protocol/src/: lib.rs
signalling/: Cargo.toml  simple-server.py
signalling/src/: lib.rs
signalling/src/handlers/: mod.rs
signalling/src/protocol/: mod.rs
signalling/src/server/: mod.rs
www/: input.js  keyboard.js  webrtc.js
