[package]
name = "webrtcsink"
version = "0.1.0"
edition = "2018"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
license = "MIT"
description = "GStreamer WebRTC sink"
repository = "https://github.com/centricular/webrtcsink/"
build = "build.rs"

[dependencies]
gst = { path="../../../gstreamer-rs/gstreamer", package="gstreamer", features = ["v1_20", "ser_de"]}
gst-app = { path="../../../gstreamer-rs/gstreamer-app", package="gstreamer-app", features = ["v1_20"]}
gst-base = { path="../../../gstreamer-rs/gstreamer-base", package="gstreamer-base" }
gst-video = { path="../../../gstreamer-rs/gstreamer-video", features = ["v1_20", "ser_de"], package="gstreamer-video"}
gst-webrtc = { path="../../../gstreamer-rs/gstreamer-webrtc", features = ["v1_20"], package="gstreamer-webrtc"}
gst-sdp = { path="../../../gstreamer-rs/gstreamer-sdp", features = ["v1_20"], package="gstreamer-sdp"}
gst-rtp = { path="../../../gstreamer-rs/gstreamer-rtp", features = ["v1_20"], package="gstreamer-rtp"}
gst-utils = { path="../../../gstreamer-rs/gstreamer-utils", package="gstreamer-utils"}
gst-objects = {path="../../../gstreamer-rs/gstreamer-objects", package="gstreamer-objects"}

gobject = { path="/home/thiblahute/devel/misc/gobject", features = ["use_gst"] }

once_cell = "1.0"
chrono = { version = "0.4", default-features = false }
smallvec = "1"
anyhow = "1"
thiserror = "1"
futures = "0.3"
async-std = { version = "1", features = ["unstable"] }
async-native-tls = { version = "0.4.0" }
async-tungstenite = { version = "0.17", features = ["async-std-runtime", "async-native-tls"] }
serde = "1"
serde_json = "1"
fastrand = "1.0"
webrtcsink-protocol = { version = "0.1", path="../protocol" }
human_bytes = "0.3.1"
url = "2"

[dev-dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3.0.0-rc.1", features = ["derive"] }

[lib]
name = "webrtcsink"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7"

[features]
static = []
capi = []
gst1_22 = ["gst/v1_22", "gst-app/v1_22", "gst-video/v1_22", "gst-webrtc/v1_22", "gst-sdp/v1_22", "gst-rtp/v1_22"]

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-rtp >= 1.20, gstreamer-webrtc >= 1.20, gstreamer-1.0 >= 1.20, gstreamer-app >= 1.20, gstreamer-video >= 1.20, gstreamer-sdp >= 1.20, gobject-2.0, glib-2.0, gmodule-2.0"

[[example]]
name = "webrtcsink-stats-server"
